fail_crate/tests/into_and_into_iter.stderr
error: `into` cannot be combined with `into_iter` in field `#[new(...)]`.
 --> fail_crate/tests/into_and_into_iter.rs:5:5
  |
5 | /     #[new(into, into_iter)]
6 | |     x: Vec<u32>
  | |_______________^
