fail_crate/tests/into_and_into_iter.rs
use inew::New;

#[derive(New)]
struct A {
    #[new(into, into_iter)]
    x: Vec<u32>
}

fn main() {}
